2024 day 03 - part 02: implementation